# leaf-type-mixture

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  environment.yml  pyproject.toml  reinstall.txt  setup.py
.github/workflows/: test.yml
docs/: Makefile  conf.py  index.rst  make.bat
ltm/: data.py  features.py  models.py  visualize.py
notebooks/: 0-ground-truth.ipynb  0-ph-ground-truth.ipynb  1-band-importance.ipynb  1-ph-band-importance.ipynb  1-ph-reducers.ipynb  2-compositing.ipynb  2-ph-compositing.ipynb  2-ph-reducer-composites.ipynb  2-ph-reducers.ipynb  2-ph-time-windows.ipynb  3-hyperparameter-tuning.ipynb  3-ph-compositing.ipynb  3-ph-hyperparameter-tuning.ipynb  3-ph-reducer-clustering.ipynb  4-generalization.ipynb  4-ph-band-importance.ipynb  4-ph-generalization.ipynb  4-ph-time-window.ipynb  5-ph-end-member-training.ipynb  7-ph-hyperparameter-tuning.ipynb  concept.ipynb  data_prep.ipynb  failed-attempts.ipynb  failed-base-area-end-member-training.ipynb  failed-time-window.ipynb  ltm.mplstyle  ruff.toml  tmp.ipynb  tmp_nDOM.ipynb  tutorial.ipynb  typical_usage.ipynb
reports/: band_importance.csv  compositing.csv  generalization.csv  ground_truth.csv  hyperparameter_tuning.csv  rolling_window.csv
slc/: data.py  features.py  models.py  visualize.py
src/: data.py  features.py  models.py
src/slc/: data.py  features.py  models.py  visualize.py
test/: ruff.toml  test_data.py  test_features.py  test_models.py  test_visualize.py
